# mlops

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  data_engineering_repo_bootstrap.sh  docker-compose.yml  notes.md  pyproject.toml  skill.md
.claude/agents/: de-code-reviewer.md
.claude/skills/auto-fix-linting-errors/: SKILL.md
.github/workflows/: ci.yml
airflow/: airflow.cfg  airflow.db
airflow/dags/: sample_dag.py
artifacts/: baseline_stats.json  drift_history.csv  drift_report.json
dags/: drift_dag.py
docker/: Dockerfile
scripts/hooks/: pre-push
src/: check_for_daily_drift.py  generate_inference.py  main.py  train.py
src/pipelines/: etl_api_to_duckdb.py  etl_buggy.py  mrr_buggy.py  spark_job.py  sql_runner.py
