[project]
name = "de-with-claude-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
]

# TODO: remove this and refactor repo
[tool.setuptools]
packages = ["dags"]  # Explicitly include the 'src' directory as the package

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
]
